# Generated BUILD.bazel for src/actions

load("//:defs.bzl", "COPTS", "LINKOPTS", "DEFAULT_VISIBILITY")

package(default_visibility = DEFAULT_VISIBILITY)

# Export all local files for cross-package references
exports_files(glob(["*.cc", "*.h"], allow_empty = True))

# Header library for cross-package includes (sandbox compatible)
cc_library(
    name = "src_actions_headers",
    hdrs = glob(["*.h","*.cc"], allow_empty = True),
    deps = ["//:config_h"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

# Library: ips_actions
cc_library(
    name = "ips_actions",
    srcs = [
    "actions_module.cc",
    "ips_actions.cc",
    "act_alert.cc",
    "act_block.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_log.cc",
    "act_pass.cc",
    "act_react.cc",
    "act_reject.cc",
    "act_replace.cc",
],
    hdrs = [
    "actions_module.h",
    "ips_actions.h",
],
    deps = [
    "//:src_headers",
    "//:tools_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    includes = ["."],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

# Plugin module: act_alert

cc_binary(
    name = "act_alert",
    srcs = [
    "act_alert.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_alert",
    srcs = [
    "act_alert.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_block

cc_binary(
    name = "act_block",
    srcs = [
    "act_block.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_block",
    srcs = [
    "act_block.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_drop

cc_binary(
    name = "act_drop",
    srcs = [
    "act_drop.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_drop",
    srcs = [
    "act_drop.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_file_id

cc_binary(
    name = "act_file_id",
    srcs = [
    "act_file_id.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_file_id",
    srcs = [
    "act_file_id.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_log

cc_binary(
    name = "act_log",
    srcs = [
    "act_log.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_log",
    srcs = [
    "act_log.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_pass

cc_binary(
    name = "act_pass",
    srcs = [
    "act_pass.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_pass",
    srcs = [
    "act_pass.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_react

cc_binary(
    name = "act_react",
    srcs = [
    "act_react.cc",
    "actions_module.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_react",
    srcs = [
    "act_react.cc",
    "actions_module.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_reject

cc_binary(
    name = "act_reject",
    srcs = [
    "act_reject.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_reject",
    srcs = [
    "act_reject.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "act_replace.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)

# Plugin module: act_replace

cc_binary(
    name = "act_replace",
    srcs = [
    "act_replace.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = ["//:src_headers"],
    copts = COPTS,
    linkopts = LINKOPTS,
    linkshared = True,
)

# Static version for linking into binaries
cc_library(
    name = "libsnort_static_act_replace",
    srcs = [
    "act_replace.cc",
    "actions_module.cc",
    "act_react.cc",
    "act_log.cc",
    "act_drop.cc",
    "act_file_id.cc",
    "act_reject.cc",
    "act_pass.cc",
    "ips_actions.cc",
    "act_block.cc",
    "act_alert.cc",
    "ips_actions.h",
    "actions_module.h",
] + glob(["*.h"], exclude = ["ips_actions.h", "actions_module.h"], allow_empty = True),
    deps = [
    "//:src_headers",
    "//src/detection:src_detection_headers",
    "//src/file_api:src_file_api_headers",
    "//src/framework:src_framework_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/packet_io:src_packet_io_headers",
    "//src/parser:src_parser_headers",
    "//src/payload_injector:src_payload_injector_headers",
    "//src/profiler:src_profiler_headers",
    "//src/protocols:src_protocols_headers",
    "//src/service_inspectors/http2_inspect:src_service_inspectors_http2_inspect_headers",
    "//src/trace:src_trace_headers",
    "//src/utils:src_utils_headers",
],
    copts = COPTS,
    linkstatic = True,
)
