
load("//:defs.bzl", "COPTS", "LINKOPTS", "DEFAULT_VISIBILITY")

package(default_visibility = DEFAULT_VISIBILITY)

# Export all local files for cross-package references
exports_files(glob(["*.cc", "*.h"], allow_empty = True))

# Header library for cross-package includes (sandbox compatible)
cc_library(
    name = "src_connectors_headers",
    hdrs = glob(["*.h","*.cc"], allow_empty = True),
    deps = ["//:config_h"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

# Library: connectors
cc_library(
    name = "connectors",
    srcs = ["connectors.cc"],
    hdrs = ["connectors.h"],
    deps = [
    "//:src_headers",
    "//:tools_headers",
    "//src/framework:src_framework_headers",
    "//src/managers:src_managers_headers",
],
    copts = COPTS,
    includes = ["."],
    alwayslink = True,
    visibility = ["//visibility:public"],
)
