
load("//:defs.bzl", "COPTS", "LINKOPTS", "DEFAULT_VISIBILITY")

package(default_visibility = DEFAULT_VISIBILITY)

# Export all local files for cross-package references
exports_files(glob(["*.cc", "*.h"], allow_empty = True))

# Header library for cross-package includes (sandbox compatible)
cc_library(
    name = "src_control_headers",
    hdrs = glob(["*.h","*.cc"], allow_empty = True),
    deps = ["//:config_h"],
    visibility = ["//visibility:public"],
)

# Library: control
cc_library(
    name = "control",
    srcs = [
    "control.cc",
    "control_mgmt.cc",
],
    hdrs = [
    "control_mgmt.h",
    "control.h",
],
    deps = [
    "//:src_headers",
    "//:tools_headers",
    "//src/catch:src_catch_headers",
    "//src/log:src_log_headers",
    "//src/main:src_main_headers",
    "//src/managers:src_managers_headers",
    "//src/utils:src_utils_headers",
    "//src:src_headers",
],
    copts = COPTS,
    includes = ["."],
    alwayslink = True,
    visibility = ["//visibility:public"],
)
